--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,6 +36,8 @@
   font-size: 2rem;
   font-weight: bold;
   transition: color 0.3s ease-in-out;
+  display: flex;
+  gap: 0.25rem 0.5rem; /* vertical gap | horizontal gap */
 }
 
 .navbar-left {
